--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,6 +17,10 @@ repos:
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.6.7
     hooks:
+      - id: ruff
+        args:
+          - --fix
+          - --exit-non-zero-on-fix
       - id: ruff-format
 
   - repo: https://github.com/pre-commit/mirrors-mypy
