--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,26 +19,15 @@ python = "^3.9"
 line-length = 120
 
 [tool.ruff.lint]
-ignore = ["E501", "G004", "PLR2004", "RUF005", "RUF012", "UP040"] # long lines, fstrings in logs, magic values, consider not concat, mutable classbits, type instead of TypeAlias
-extend-select = ["W", "B", "Q", "C90", "I", "UP", "YTT", "ASYNC", "S", "BLE", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA",
-                 "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "PTH",
-                 "FIX", "PGH", "PL", "TRY", "FLY", "PERF", "RUF"]
+ignore = ["E501", "G004", "PLR2004", "RUF005", "RUF012", "UP040"] # longlines, fstrings in logs, magic values, consider not concat, mutable classbits, type instead of TypeAlias
+extend-select = ["W", "I", ]
+# extend-select = [ "SLF", "SIM", "B", "Q", "C90", "I", "UP", "YTT", "ASYNC", "S", "BLE", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA",
+#                  "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLOT", "TID", "TCH", "INT", "PTH",
+#                  "FIX", "PGH", "PL", "TRY", "FLY", "PERF", "RUF"]
 unfixable = ["ERA"]
 
-# things skipped:
-# N: naming, possibly good
-# D: docstrings missing throughout
-# ANN: annotations missing throughout
-# FBT: not convinced boolean trap worth auto-banning.
-# CPY: copyright at top of each file
-# G: logging warnings -- fstrings bad?
-# ARG: sometimes you need to accept arguments.
-# TD: somewhat finicky details about formatting TODOs
-# FIX: flags todos: possible to add -- skipped for now
-# ERA: lots of false positives, not a good autofix
-# PD, NPY, AIR: ignored, panda / numpy / airflow specific
-# FURB: not yet out of preview
-
+[tool.ruff.lint.extend-per-file-ignores]
+"test_*" = ["S101"]  # `assert` is fine in tests
 
 [tool.commitizen]
 name = "cz_conventional_commits"
