--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ readme = "README.md"
 python = "^3.9"
 "ruamel.yaml" = "^0.18.0"
 typing-extensions = "^4.12.2"
+markdown-it-py = "^3.0.0"
+mdit-py-plugins = "^0.4.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
