FCL-656 | update high court naming to replace & with and

--- a/src/ds_caselaw_utils/data/court_names.yaml
+++ b/src/ds_caselaw_utils/data/court_names.yaml
@@ -45,7 +45,7 @@
       selectable: true
       listable: true
 - name: high_court
-  display_name: "High Court (England & Wales)"
+  display_name: "High Court (England and Wales)"
   is_tribunal: false
   courts:
     - code: EWHC-QBD-Admin
