--- a/src/ds_caselaw_utils/data/court_names.yaml
+++ b/src/ds_caselaw_utils/data/court_names.yaml
@@ -547,3 +547,19 @@
       end_year: 2010
       selectable: true
       listable: false
+    - code: FTT-Claims
+      name: Claims Management Services Tribunal
+      param: ftt/claims
+      link: https://webarchive.nationalarchives.gov.uk/ukgwa/20200626120017/http:/claimsmanagement.decisions.tribunals.gov.uk/
+      start_year: 2006
+      end_year: 2010
+      selectable: true
+      listable: false
+    - code: FTT-Transport
+      name: Transport Tribunal
+      param: ftt/transport
+      link: https://webarchive.nationalarchives.gov.uk/ukgwa/20160811143636/http://www.transporttribunal.gov.uk/Aspx/Default.aspx
+      start_year: 2000
+      end_year: 2010
+      selectable: true
+      listable: false
